# Shell-with-Unix-sockets

./: .clangd  .gitignore  CMakeLists.txt
include/: executor.h  parse.h  parse_utils.h  utils.h
src/: client.c  config.c  help.c  log.c  main.c  server.c  types.h
src/exec/: executor.c  executor.h  executor_utils.c  executor_utils.h
src/parse/: parse.c  parse.h  parse_utils.c  parse_utils.h  utils.c  utils.h
src/parse/test/: parse.c
src/shell/: executor.c  executor.h
test/: executor.c  parse.c  utils.c
test/parse/: log.c  parse.c
